core-v2(batch-6): make backup I/O API 26 compatible